<resources>
    <string name="app_name">Intent Playground</string>
    <string name="preset">Preset</string>
    <string name="action">Action</string>
    <string name="edit_text_action">android.intent.action.MAIN</string>
    <string name="category">Category</string>
    <string name="edit_text_category">android.intent.category.LAUNCHER</string>
    <string name="package_name">Package Name</string>
    <string name="class_name">Class Name</string>
    <string name="edit_text_package_name">com.example.package</string>
    <string name="edit_text_class_name">com.example.package.MainActivity</string>
    <string name="run">Run</string>
</resources>
