<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="1dp"
            tools:layout_editor_absoluteX="1dp" android:gravity="bottom|fill_horizontal"
            android:layout_margin="12dp">
        <TextView
                android:text="@string/preset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textPreset" android:labelFor="@id/spinnerPreset"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnerPreset" android:minHeight="48dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textAction"
                        android:labelFor="@id/editTextAction"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@string/edit_text_action"
                            android:ems="10"
                            android:id="@+id/editTextAction" android:layout_weight="1" android:minHeight="48dp"
                            android:autofillHints=""/>
                    <Spinner
                            android:layout_width="120dp"
                            android:layout_height="wrap_content" android:id="@+id/spinnerAction"
                            android:minHeight="48dp"
                            android:entries="@array/spinnerActions"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textCategory"
                        android:labelFor="@id/editTextCategory"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@string/edit_text_category"
                            android:ems="10"
                            android:id="@+id/editTextCategory" android:layout_weight="1" android:minHeight="48dp"
                            android:autofillHints=""/>
                    <Spinner
                            android:layout_width="120dp"
                            android:layout_height="wrap_content" android:id="@+id/spinnerCategory"
                            android:minHeight="48dp"
                            android:entries="@array/spinnerCategories"/>
                </LinearLayout>
            </LinearLayout>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxUseCategory"
                    android:minWidth="48dp" android:minHeight="48dp" android:checked="true"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/package_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textPackageName"
                        android:labelFor="@id/editTextPackageName"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/edit_text_package_name"
                        android:ems="10"
                        android:id="@+id/editTextPackageName" android:minHeight="48dp" android:autofillHints=""
                />
                <TextView
                        android:text="@string/class_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textClassName"
                        android:labelFor="@id/editTextClassName"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/edit_text_class_name"
                        android:ems="10"
                        android:id="@+id/editTextClassName" android:minHeight="48dp" android:autofillHints=""
                />
            </LinearLayout>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxUsePackage"
                    android:minHeight="48dp" android:minWidth="48dp" android:checked="true"/>
        </LinearLayout>
        <Button
                android:text="@string/run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonRun"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
